backend/kubernetes/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-application
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
