backend/kubernetes/https-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-secure
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: https
  selector:
    app: backend-application
  type: LoadBalancer
