backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-application
  ports:
    - port: 80
      targetPort: 9000
  type: LoadBalancer
